<resources>
    <string name="app_name">AshPazBashi</string>
    <string name="dialog_title">Categories:</string>
    <string name="ok_label">OK</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear all</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="name_is_empty_or_is_used_before">Name is empty or is used before.</string>
    <string name="step_sub_des_error">subject or description cannot be empty</string>
    <string name="food_delete_warning">Are you sure about deleting this food?</string>
    <string name="step_delete_warning">Are you sure about deleting this step?</string>
<!--    <string name="done">done</string>-->
<!--    <string name="add_media">add media</string>-->
<!--    <string name="description">description</string>-->
    <string name="subject">subject</string>
<!--    <string name="category">category</string>-->
<!--    <string name="description">description</string>-->
<!--    <string name="ingredients">ingredients</string>-->
<!--    <string name="recipe">recipe</string>-->
<!--    <string name="add_media">add media</string>-->
<!--    <string name="done">done</string>-->
<!--    <string name="add">+</string>-->
<!--    <string name="name">name</string>-->
    <string name="amount">amount</string>
    <string name="multiautocompletetextview">MultiAutoCompleteTextView</string>
    <string name="company_name">company name</string>
    <string name="add_picture">add picture</string>
    <string name="done">done</string>
    <string name="delete">Delete</string>
    <string name="name">name</string>
    <string name="add">+</string>
    <string name="category">category</string>
    <string name="description">description</string>
    <string name="ingredients">ingredients</string>
    <string name="recipe">recipe</string>
    <string name="add_media">add media</string>

    <string-array name="food_category_items">
        <item>pasta and noodle</item>
        <item>fast food</item>
        <item>soup</item>
        <item>bread and cookie</item>
        <item>ice cream</item>
        <item>appetizer</item>
        <item>main food</item>
        <item>dessert</item>
        <item>traditional</item>
        <item>rice</item>
        <item>etc</item>
    </string-array>
</resources>