<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AddIngredientsActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="77dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="72dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="165dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="124dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="149dp" />

    <MultiAutoCompleteTextView
        android:id="@+id/multiAutoCompleteTextView2"
        android:layout_width="85dp"
        android:layout_height="44dp"
        android:text="@string/multiautocompletetextview"
        tools:layout_editor_absoluteX="270dp"
        tools:layout_editor_absoluteY="149dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="243dp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="234dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="294dp"
        android:layout_height="47dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/secendry_buttons"
        android:text="@string/add_picture"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/theme_button"
        android:text="@string/done"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="287dp"
        tools:layout_editor_absoluteY="640dp" />
</androidx.constraintlayout.widget.ConstraintLayout>